inou/prp/tests/errors/attribute_width_renamed.prp
/*
:name: attribute_width_renamed
:type: error
:error: not a Pyrope attribute name
:help: use `bits` to read a width
*/

// Verilog habit — Pyrope widths are read with `.[bits]` and set by
// declaring a type (`:u8`), never via a `width` attribute.

mut x:u8:[width=4] = 1  // locate_error_here
